...
    // MARK: - Strings
    enum Strings {
        /*
         The Keys of Database
         */
        enum FavoriteButton {
            static let add = "Add favorite"
            static let remove = "Remove favorite"
            static let jumpToFavoriteList = "Favorite List"
        }
    }
    
    // MARK: - Errors
    enum Errors {
...
